--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap"
             rel="stylesheet"
         />
+        <script
+            defer
+            src="https://analytics.okankoca.dev/script.js"
+            data-website-id="e587c5b3-9fb4-4765-a2af-d777bd7da7b9"
+        ></script>
     </head>
     <body>
         <div id="root"></div>
